KubeAppNagp2025/manifests/service-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: service-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service-api
    spec:
      containers:
      - name: service-api
        image: kamal01236/service-api:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: appsettings-volume
          mountPath: "appsettings.json" # Mount point inside the container
          subPath: appsettings.json         # Specifies which key from the ConfigMap to mount as a file
          readOnly: true                    # Recommended for configuration files
      volumes:
      - name: appsettings-volume
        configMap:
          name: service-api-appsettings-config # Reference the ConfigMap created above
