KubeAppNagp2025/manifests/service-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
spec:
  selector:
    app: service-api
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 8080
      targetPort: 80
      name: admin
    - port: 9000
      targetPort: 80
      name: health
    - port: 10000
      targetPort: 80
      name: metrics
  type: ClusterIP
