KubeAppNagp2025/manifests/nagp-service-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagp-service-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nagp-service-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nagp-service-api
            port:
              number: 80
